<resources>
    <string name="app_name">ApNews</string>
    <string name="welcome">Welcome To</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_using">Sign Up Using</string>
    <string name="already_have_an_account">Already have An Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="or_using">Or Using</string>
    <string name="please_enter_otp">Please Enter Otp</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="dummy_heading">Dummy Heading</string>
    <string name="dummy_description">Dummy Description</string>
    <string name="news_image">News Image</string>
    <string name="dummy_date">Dummy Date</string>
    <string name="ap">Ap</string>
    <string name="news">News</string>
    <string name="search_a_news">Search News</string>
    <string name="side_menu">Side Menu</string>
    <string name="back">Back</string>
    <string name="searh_hint_text">Search for topics, location &amp; sources</string>
    <string name="read_more">Read More</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="share_news">Share News</string>
    <string name="contact_us">Contact Us</string>
    <string name="report">Report</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="build_by">Developed By Aviral Kaushik</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="author">Author :</string>
    <string name="dummy_author">Dummy Author</string>
    <string name="source">Source :</string>
    <string name="dummy_source">Dummy Source</string>
    <string name="unknown">Unknown</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="select_location">Select Location</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="save_settings">Save Settings</string>
    <string name="select_language">Select Language</string>
    <string name="all_the_news_will_appear_in_selected_language">All the news will appear in selected language</string>
    <string name="shane_news_settings">Share News Settings</string>
    <string name="share_news_desc_text">This text will appear after the news, when you share a news, you can change it!</string>
    <string name="us">Us</string>
    <string name="contact_us_page">Contact</string>
    <string name="your_name">Your Name</string>
    <string name="message">Message</string>
    <string name="rate">Give Ratings</string>
    <string name="rate_header">Rate</string>
    <string name="user">User</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="please_select_a_login_method">Please Select a Start Method</string>
    <string name="skip_for_now">Sign In as Guest</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_start">Back to Start</string>
    <string name="your_email">Your Email</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="contact_email">Contact Email: zaviralkaushik@gmail.com</string>
    <string name="visit_website">Visit Website</string>
    <!-- Strings used for fragments for navigation -->

</resources>