<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/backToMain"
            android:icon="@drawable/ic_main"
            android:title="@string/news"/>

        <item android:id="@+id/website"
            android:icon="@drawable/ic_website"
            android:title="@string/visit_website"/>

        <item android:id="@+id/user_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>

        <item android:id="@+id/settings_side_menu"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>


    </group>

    <group android:checkableBehavior="single">

        <item android:id="@+id/share_application"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>

        <item android:id="@+id/share_news_settings"
            android:icon="@drawable/ic_message"
            android:title="@string/share_news"/>

        <item android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us"/>

    </group>

    <group android:checkableBehavior="single">

        <item android:id="@+id/report"
            android:icon="@drawable/ic_report"
            android:title="@string/report"/>

        <item android:id="@+id/rate_us"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us"/>

    </group>

</menu>