<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backToMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/news_image"
    tools:context=".FullNewsActivity">

    <ImageView
        android:id="@+id/news_image_desc"
        android:layout_width="400dp"
        android:layout_height="227dp"
        android:contentDescription="@string/news_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/read_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/read_more"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="454dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@+id/news_image_desc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">


            <TextView
                android:id="@+id/dummy_heading_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="13dp"
                android:text="@string/dummy_heading"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/news_description_desc"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/dummy_description"
                android:textSize="17sp"
                android:textStyle="normal" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:background="@color/background_color"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="33dp"
                    android:textColor="@color/text_color"
                    android:text="@string/author"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/dummy_author"
                    android:textColor="@color/text_color"
                    app:layout_constraintBaseline_toBaselineOf="@id/textView9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:textColor="@color/text_color"
                    tools:layout_editor_absoluteY="44dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    app:layout_constraintLeft_toLeftOf="@id/textView9"
                    app:layout_constraintRight_toRightOf="@id/textView9"
                    app:layout_constraintTop_toTopOf="@id/textView9"/>

                <TextView
                    android:id="@+id/source"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/dummy_source"
                    app:layout_constraintBaseline_toBaselineOf="@id/textView12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@id/author"
                    app:layout_constraintRight_toRightOf="@id/author"
                    app:layout_constraintTop_toTopOf="@id/author"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email"
                    android:textColor="@color/text_color"
                    android:textStyle="italic|bold"
                    android:textSize="17sp"
                    android:layout_marginTop="33dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintTop_toBottomOf="@id/textView12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/backToMainDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ic_back_white" />

    <ImageView
        android:id="@+id/shareNewsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_news"
        app:layout_constraintBottom_toBottomOf="@+id/news_image_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/backToMainDesc"
        app:layout_constraintTop_toTopOf="@+id/news_image_desc"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/ic_share_white" />

    <ImageView
        android:id="@+id/contact_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/contact_email"
        app:layout_constraintBottom_toBottomOf="@id/shareNewsDesc"
        app:layout_constraintRight_toRightOf="@id/shareNewsDesc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_info" />


</androidx.constraintlayout.widget.ConstraintLayout>