<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_margin="15dp"
    android:padding="7dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dp"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/news_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/heading"
        android:textStyle="bold"
        android:layout_width="210dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color"
        android:background="@color/background_color"
        android:text="@string/dummy_heading"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/news_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text_color"
        android:text="@string/dummy_date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>