<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:background="@color/background_color"
        app:itemIconTint="@color/text_color"
        app:itemTextColor="@color/text_color"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ap_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/side_menu"
            android:text="@string/settings"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.755" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/search_a_news"
            android:text="@string/news"
            android:textColor="@color/text_color"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.755" />

        <ImageView
            android:id="@+id/side_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:tint="@color/text_color"
            android:contentDescription="@string/side_menu"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="3dp"
            android:background="@color/dividerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/share_news_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shane_news_settings"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider3"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/share_news_desc_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/share_news_desc_text"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="@id/share_news_settings_text"
            app:layout_constraintLeft_toLeftOf="@id/share_news_settings_text"/>

        <EditText
            android:id="@+id/textArea_news_share_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:scrollbarStyle="insideInset"
            android:textSize="16sp"
            android:focusable="false"
            android:scrollbars="vertical"
            android:lines="6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollHorizontally="false"
            app:layout_constraintTop_toBottomOf="@id/share_news_desc_text"
            android:layout_marginTop="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="Autofill,LabelFor"/>

        <Button
            android:id="@+id/save_news_share_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_background"
            android:text="@string/save_settings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintLeft_toLeftOf="@id/textArea_news_share_settings"
            app:layout_constraintRight_toRightOf="@id/textArea_news_share_settings"
            app:layout_constraintTop_toBottomOf="@id/textArea_news_share_settings"
            app:layout_constraintVertical_bias="0.359" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>