<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        android:background="@color/background_color"
        app:itemIconTint="@color/text_color"
        app:itemTextColor="@color/text_color"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ap_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ap"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/news_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.136" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                app:layout_constraintBaseline_toBaselineOf="@id/textView2"
                android:text="@string/news"
                android:textColor="@color/text_color"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/news_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.232" />

            <ImageView
                android:id="@+id/search_news_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/search_a_news"
                app:layout_constraintBottom_toTopOf="@+id/news_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.873"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.34"
                app:srcCompat="@drawable/ic_baseline_search_24" />

            <ImageView
                android:id="@+id/side_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/side_menu"
                app:layout_constraintBottom_toTopOf="@+id/news_recycler_view"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.34"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/text_color"
                app:layout_constraintBottom_toTopOf="@+id/news_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.328" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_recycler_view"
                android:layout_width="397dp"
                android:layout_height="600dp"
                android:background="@color/background_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/loadingBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>